# polaris-tauri-app

./: CHANGELOG.md  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: fonts.css  main.ts  router.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test.db
src-tauri/src/: app.rs  db.rs  main.rs  main_.rs  options.rs  paths.rs  test.rs  utils.rs
src-tauri/src/app/: config.rs  ddns.rs  index.rs  lastfm.rs  playlist.rs  settings.rs  test.rs  thumbnail.rs  user.rs  vfs.rs
src-tauri/src/app/index/: metadata.rs  query.rs  test.rs  types.rs  update.rs
src-tauri/src/app/index/update/: cleaner.rs  collector.rs  inserter.rs  traverser.rs
src-tauri/src/db/: schema.rs
src-tauri/src/service/: actix.rs  dto.rs  error.rs  test.rs
src-tauri/src/service/actix/: api.rs  test.rs
src-tauri/src/service/test/: admin.rs  auth.rs  collection.rs  ddns.rs  lastfm.rs  media.rs  playlist.rs  protocol.rs  settings.rs  swagger.rs  user.rs  web.rs
src/api/: endpoints.ts
src/components/: Auth.vue  Sidebar.vue
src/components/collection/: Breadcrumbs.vue
src/components/collection/search/: Search.vue  SearchInput.vue
src/components/initial-setup/: InitialSetup.vue
src/components/playback/: Player.vue
src/components/settings/: Tabs.vue
src/stores/: user.ts
